src/main/kotlin/com/example/planificador/error/exception/UserExistException.kt
package com.example.planificador.error.exception

class UserExistException(message: String) : Exception(message) {
}